--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-awesome-slider": "^2.4.2",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-shared-element": "^0.8.8",
+    "react-native-system-navigation-bar": "^2.6.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
